fixes scroll issues and overlap chat box issue

--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -4,12 +4,14 @@
   bottom: 0;
   padding: 25px;
   width: 100%;
-  overflow: scroll;
+
 }
 
 .chat-container {
   padding-top: 20px;
   position: absolute;
+  bottom: 60px;
+  overflow: scroll;
 
   // .alert-info {
   //   display: block;
